# reduction

./: .gitignore  CMakeLists.txt  readme.markdown
cli/: CMakeLists.txt
cli/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: enumerations.cpp  version-sanity.cpp
